cmake_minimum_required(VERSION 3.28)
project(Cpp_study)

set(CMAKE_CXX_STANDARD 14)

add_executable(Cpp_study
        "Baekjoon/bronze/bronze I/11655.cpp"
        "Baekjoon/bronze/bronze I/2309.cpp"
        "Baekjoon/bronze/bronze II/10988.cpp"
        "Baekjoon/bronze/bronze II/1159.cpp"
        "Baekjoon/bronze/bronze II/2979.cpp"
        "Baekjoon/bronze/bronze IV/10808.cpp"
        "Baekjoon/silver/silver I/2178.cpp"
        "Baekjoon/silver/silver IV/1620.cpp"
        Baekjoon/silver/siver_III/17212_for_the_rabbit_on_the_moon.cpp
        "Baekjoon/solve_step_by_step/12. 브루트 포스/1. 블랙잭.cpp"
        "Programmers/Dev-Matching/Level 1/the highest and lowest ranks of the lotto.cpp"
        "Programmers/Greedy/01. workout clothes.cpp"
        "Programmers/Hash/01. players who did not complete.cpp"
        "Programmers/KAKAO/Level 1/dart game.cpp"
        "Programmers/KAKAO/Level 1/secret map.cpp"
        "Programmers/Monthly Code Challenge/Level 1/find the number that makes the rest one.cpp"
        "Programmers/Monthly Code Challenge/Level 1/flip the 3-digit rule.cpp"
        "Programmers/Monthly Code Challenge/Level 1/pick two and add them.cpp"
        "Programmers/Monthly Code Challenge/Level 1/the number and addition of divisor.cpp"
        "Programmers/practice/Level 1/2016 year.cpp"
        "Programmers/practice/Level 1/add digits.cpp"
        "Programmers/practice/Level 1/addition of matrices.cpp"
        "Programmers/practice/Level 1/arrange the strings however you want.cpp"
        "Programmers/practice/Level 1/bring the middle letter.cpp"
        "Programmers/practice/Level 1/Caesar cipher.cpp"
        "Programmers/practice/Level 1/collatz conjecture.cpp"
        "Programmers/practice/Level 1/covering your phone number.cpp"
        "Programmers/practice/Level 1/determining the square root of an integer.cpp"
        "Programmers/practice/Level 1/divided number arrangement.cpp"
        "Programmers/practice/Level 1/dot a rectangle star.cpp"
        "Programmers/practice/Level 1/find Kim in seoul.cpp"
        "Programmers/practice/Level 1/find prime number.cpp"
        "Programmers/practice/Level 1/flip the natural tree and make it into an arrangement.cpp"
        "Programmers/practice/Level 1/GCD and LCM.cpp"
        "Programmers/practice/Level 1/harshad number.cpp"
        "Programmers/practice/Level 1/i don't like the same number.cpp"
        "Programmers/practice/Level 1/make a prime number.cpp"
        "Programmers/practice/Level 1/make a weird text.cpp"
        "Programmers/practice/Level 1/mean.cpp"
        "Programmers/practice/Level 1/n numbers spaced by x.cpp"
        "Programmers/practice/Level 1/number of p and y in string.cpp"
        "Programmers/practice/Level 1/odd and even.cpp"
        "Programmers/practice/Level 1/place the numbers in descending order.cpp"
        "Programmers/practice/Level 1/remove the smallest number.cpp"
        "Programmers/practice/Level 1/string descending.cpp"
        "Programmers/practice/Level 1/string handling basics.cpp"
        "Programmers/practice/Level 1/string to integer.cpp"
        "Programmers/practice/Level 1/subaksubaksubak.cpp"
        "Programmers/practice/Level 1/sum between the two integers.cpp"
        "Programmers/practice/Level 1/sum of divisor.cpp"
        "Programmers/Sort/01. number of k.cpp"
        "Programmers/Summer, winter Coding/Level 1/budget.cpp"
        "Programmers/Weekly Challenge/Level 1/at least a rectangle.cpp"
        "Programmers/Weekly Challenge/Level 1/calculating the insufficient amount.cpp"
        "여러 기능들/priority_queue.cpp"
        "여러 기능들/vector.cpp"
        "여러 기능들/배열을 리턴하는 함수.cpp"
        "여러 기능들/여러 기능들.cpp"
        "여러 기능들/입출력에서 시간 줄이기.cpp"
        "여러 기능들/정렬.cpp"
        "Baekjoon/solve_step_by_step/12. 브루트 포스/2. 분해합.cpp"
        "Baekjoon/solve_step_by_step/12. 브루트 포스/3. 수학은 비대면강의입니다.cpp"
        "Baekjoon/solve_step_by_step/12. 브루트 포스/4. 체스판 다시 칠하기.cpp"
        "Baekjoon/solve_step_by_step/12. 브루트 포스/5. 영화감독 숌.cpp"
        "Baekjoon/solve_step_by_step/12. 브루트 포스/6. 설탕 배달.cpp"
        "Baekjoon/solve_step_by_step/13. 정렬/01. 수 정렬하기.cpp"
        "Baekjoon/solve_step_by_step/13. 정렬/02. 대표값2.cpp"
        "Baekjoon/solve_step_by_step/13. 정렬/03. 커트라인.cpp"
        "Baekjoon/solve_step_by_step/13. 정렬/04. 수 정렬하기 2.cpp"
        "Baekjoon/solve_step_by_step/13. 정렬/05. 수 정렬하기 3.cpp"
        "Baekjoon/solve_step_by_step/13. 정렬/06. 소트인사이드.cpp"
        "Baekjoon/solve_step_by_step/13. 정렬/07. 좌표 정렬하기.cpp"
        "Baekjoon/solve_step_by_step/13. 정렬/09. 단어 정렬.cpp"
        "Baekjoon/solve_step_by_step/13. 정렬/10. 나이순 정렬.cpp"
        "Baekjoon/solve_step_by_step/13. 정렬/11. 좌표 압축.cpp"
        "Baekjoon/solve_step_by_step/14. 집합과 맵/01. 숫자 카드.cpp"
        "Baekjoon/solve_step_by_step/14. 집합과 맵/02. 문자열 집합.cpp"
        "Baekjoon/solve_step_by_step/14. 집합과 맵/03. 회사에 있는 사람.cpp"
        "Baekjoon/solve_step_by_step/14. 집합과 맵/04. 나는야 포켓몬 마스터 이다솜.cpp"
        "Baekjoon/solve_step_by_step/14. 집합과 맵/05. 숫자 카드 2.cpp"
        "Baekjoon/solve_step_by_step/14. 집합과 맵/06. 듣보잡.cpp"
        "Baekjoon/solve_step_by_step/14. 집합과 맵/07. 대칭 차집합.cpp"
        "Baekjoon/solve_step_by_step/14. 집합과 맵/08. 서로 다른 부분 문자열의 개수.cpp"
        "Baekjoon/solve_step_by_step/16. 스택, 큐, 덱 단계/01. 스택 2.cpp"
        "Baekjoon/solve_step_by_step/16. 스택, 큐, 덱 단계/02. 제로.cpp"
        "Baekjoon/solve_step_by_step/16. 스택, 큐, 덱 단계/03. 괄호.cpp"
        "Baekjoon/solve_step_by_step/16. 스택, 큐, 덱 단계/04. 균형잡힌 세상.cpp"
        "Baekjoon/solve_step_by_step/16. 스택, 큐, 덱 단계/05. 도키도키 간식드리미.cpp"
        "Baekjoon/solve_step_by_step/16. 스택, 큐, 덱 단계/06. 큐 2.cpp"
        "Baekjoon/solve_step_by_step/16. 스택, 큐, 덱 단계/07. 카드2.cpp"
        "Baekjoon/solve_step_by_step/16. 스택, 큐, 덱 단계/08. 요세푸스 문제 0.cpp"
        "Baekjoon/solve_step_by_step/16. 스택, 큐, 덱 단계/09. 덱 2.cpp"
        "Baekjoon/solve_step_by_step/16. 스택, 큐, 덱 단계/10. 풍선 터뜨리기.cpp"
        "Baekjoon/solve_step_by_step/16. 스택, 큐, 덱 단계/11. queuestack.cpp"
        "Baekjoon/solve_step_by_step/23. 동적 계획법 1/01. 알고리즘 수업 - 피보나치 수 1.cpp"
        "Baekjoon/solve_step_by_step/23. 동적 계획법 1/02. 신나는 함수 실행.cpp"
        "Baekjoon/solve_step_by_step/31. 그래프와 순회/05. 바이러스.cpp")
